--- a/init.org
+++ b/init.org
@@ -3,6 +3,10 @@
 Try to save customized values somewhere other than in the main init file
 #+BEGIN_SRC emacs-lisp
 (setq custom-file (expand-file-name "custom.el" user-emacs-directory))
+
+;; create an empty custom.el if there isn't one already
+(unless (file-exists-p custom-file) (write-region "" "" custom-file))
+
 (load custom-file)
 #+END_SRC
 
@@ -25,25 +29,26 @@ Try to save customized values somewhere other than in the main init file
 * OS Specific
 ** OS X
 #+BEGIN_SRC emacs-lisp
-(cond ((string-equal system-type "darwin")
-       (defun set-exec-path-from-shell-PATH ()
-         "Set up Emacs' `exec-path' and PATH environment variable to match that used by the user's shell.
+  (cond
+   ((string-equal system-type "darwin")
+    (defun set-exec-path-from-shell-PATH ()
+  "Set up Emacs' `exec-path' and PATH environment variable to match that used by the user's shell.
 
-This is particularly useful under Mac OSX, where GUI apps are not started from a shell."
-         (interactive)
-         (let ((path-from-shell (replace-regexp-in-string "[ \t\n]*$" "" (shell-command-to-string "$SHELL --login -i -c 'echo $PATH'"))))
-           (setenv "PATH" path-from-shell)
-           (setq exec-path (split-string path-from-shell path-separator))))
+  This is particularly useful under Mac OSX, where GUI apps are not started from a shell."
+      (interactive)
+      (let ((path-from-shell (replace-regexp-in-string "[ \t\n]*$" "" (shell-command-to-string "$SHELL --login -i -c 'echo $PATH'"))))
+        (setenv "PATH" path-from-shell)
+        (setq exec-path (split-string path-from-shell path-separator))))
 
-       (when (memq window-system '(mac ns))
-         (set-exec-path-from-shell-PATH))
+    (when (memq window-system '(mac ns))
+      (set-exec-path-from-shell-PATH))
 
-       (set-terminal-coding-system 'utf-8)
-       (set-keyboard-coding-system 'utf-8)
-       (prefer-coding-system 'utf-8)
-       (message "noticed you're running OS X!")
-       )
-      )
+    (set-terminal-coding-system 'utf-8)
+    (set-keyboard-coding-system 'utf-8)
+    (prefer-coding-system 'utf-8)
+    (message "noticed you're running OS X!")
+    )
+   )
 #+END_SRC
 * GUI Setup
 ** Windowing
