--- a/init.org
+++ b/init.org
@@ -26,6 +26,13 @@ Try to save customized values somewhere other than in the main init file
 (add-to-list 'load-path (concat user-init-file ".d/helm"))
 #+END_SRC
 
+** General functions
+#+BEGIN_SRC emacs-lisp
+  (defun akt/touch-file (path)
+    "Create an empty file unless the specified path already exists."
+    (unless (file-exists-p path) (write-region "" "" path)))
+#+END_SRC 
+
 * OS Specific
 #+BEGIN_SRC emacs-lisp
 (setq akt/hostname system-name)
@@ -182,6 +189,8 @@ Org mode data is saved within an iCloud directory so that it'll be replicated to
   (setq akt/agenda-personal (akt/icloud-path "personal.org"))
   (setq akt/agenda-avegant (akt/icloud-path "avegant.org"))
   (setq org-default-notes-file (akt/icloud-path (concat akt/hostname "-capture.org")))
+
+  (akt/touch-file org-default-notes-file)
 #+END_SRC 
 
 #+BEGIN_SRC emacs-lisp
@@ -220,12 +229,38 @@ Org mode data is saved within an iCloud directory so that it'll be replicated to
 
     (setq org-sec-me "andyt")
 
-    (setq org-capture-templates
-          (quote (("t" "todo" entry (file org-default-notes-file)
-                   "* TODO %?\n%U\n%a\n" :clock-in t :clock-resume t)
-                  ("M" "meeting" entry (file org-default-notes-file)
-                   "* TODO Discuss %? :MEET:\nSCHEDULED: %^{When?}T\n** Who\n   - [ ] %(eval 'org-sec-me)\n** Agenda\n   - [ ] item1\n   - [ ] item2\n** Discussion\n** Actions\n   - [ ] action1\n   - [ ] action2\n")
-                  )))
+  (setq akt/org-capture-meeting-template
+  "* TODO akt/Discuss %? :MEET:
+    SCHEDULED: %^{When?}T
+  ,** Who
+    - [ ] %(eval 'org-sec-me)
+  ,** Agenda
+    - [ ] item1\n   - [ ] item2
+  ,** Discussion
+  ,** Actions
+    - [ ] action1
+    - [ ] action2
+  "
+  )
+
+  (setq akt/org-capture-todo-template
+  "* TODO %?
+  %U
+  %a
+  "
+  )
+
+  (setq akt/org-capture-note-template
+  "* note: %?
+  "
+  )
+
+  (setq org-capture-templates
+        (list
+         (list "t" "todo" 'entry '(file org-default-notes-file) akt/org-capture-todo-template)
+         (list "m" "meeting" 'entry '(file org-default-notes-file) akt/org-capture-meeting-template)
+         (list "n" "note" 'entry '(file org-default-notes-file) akt/org-capture-note-template)
+         ))
 
     (setq org-agenda-custom-commands
           '(("h" "Work todos" tags-todo
@@ -318,7 +353,7 @@ Org mode data is saved within an iCloud directory so that it'll be replicated to
 #+END_SRC
 ** Org Mode
 #+BEGIN_SRC emacs-lisp
-  (define-key global-map (kbd "C-c o c") 'org-capture)
+  (define-key global-map (kbd "C-c c") 'org-capture)
 
   (defun akt/visit-org-captures ()
     (interactive)
@@ -331,11 +366,6 @@ Org mode data is saved within an iCloud directory so that it'll be replicated to
   (define-key global-map (kbd "C-c o C") 'akt/visit-org-captures)
   (define-key global-map (kbd "C-c o <RET>") 'akt/visit-default-org)
 
-  (global-set-key (kbd "C-c w") 'org-sec-set-with)
-  (global-set-key (kbd "C-c W") 'org-sec-set-where)
-  (global-set-key (kbd "C-c d") 'org-sec-set-dowith)
-  (global-set-key (kbd "C-c D") 'org-sec-set-doat)
-  (global-set-key (kbd "C-c j") 'org-sec-tag-entry)
   (global-set-key (kbd "C-c a") 'org-agenda)
 
 #+END_SRC
