--- a/init.org
+++ b/init.org
@@ -106,7 +106,59 @@ Try to save customized values somewhere other than in the main init file
     (ding)))
 (setq ring-bell-function 'my-bell-function)
 #+END_SRC
+** Git Gutter Fringe
+#+begin_src emacs-lisp
+  (if window-system
+      (progn
+        (require 'git-gutter-fringe)
+        (setq git-gutter-fr:side 'right-fringe)
+        (set-face-foreground 'git-gutter-fr:modified "yellow")
+        (set-face-foreground 'git-gutter-fr:added "green")
+        (set-face-foreground 'git-gutter-fr:deleted "red")
+        (setq-default left-fringe-width 5)
+        (setq-default right-fringe-width 5)
 
+        (fringe-helper-define 'git-gutter-fr:modified nil
+          "XXXXXX"
+          "XXXXXX"
+          "XXXXXX"
+          "XXXXXX"
+          "XXXXXX"
+          "XXXXXX"
+          "XXXXXX"
+          "XXXXXX"
+          "XXXXXX"
+          "XXXXXX")
+
+        (fringe-helper-define 'git-gutter-fr:added nil
+          "XXXXXX"
+          "XXXXXX"
+          "XXXXXX"
+          "XXXXXX"
+          "XXXXXX"
+          "XXXXXX"
+          "XXXXXX"
+          "XXXXXX"
+          "XXXXXX"
+          "XXXXXX
+")
+
+        (fringe-helper-define 'git-gutter-fr:deleted nil
+          "XXXXXX"
+          "XXXXXX"
+          "XXXXXX"
+          "XXXXXX"
+          "XXXXXX"
+          "XXXXXX"
+          "XXXXXX"
+          "XXXXXX"
+          "XXXXXX"
+          "XXXXXX
+")
+
+  ))
+
+#+end_src
 * File/mode association
 #+BEGIN_SRC emacs-lisp
 (defvar auto-minor-mode-alist
@@ -281,6 +333,8 @@ Org mode data is saved within an iCloud directory so that it'll be replicated to
 ** Git
 #+BEGIN_SRC emacs-lisp
 (setq magit-last-seen-setup-instructions "1.4.0")
+(setq magit-push-always-verify nil)
+(require 'git-blame)
 #+END_SRC
 ** Fill Column
 #+BEGIN_SRC emacs-lisp
@@ -346,6 +400,12 @@ Org mode data is saved within an iCloud directory so that it'll be replicated to
 (require 'ido)
 (ido-mode t)
 #+end_src
+
+** smex
+#+begin_src emacs-lisp
+(require 'smex)
+(smex-initialize)
+#+end_src
 * Keyboard Bindings
 ** Key Chords
 #+BEGIN_SRC emacs-lisp
@@ -398,4 +458,8 @@ Org mode data is saved within an iCloud directory so that it'll be replicated to
 (global-set-key [s-right] (ignore-error-wrapper 'windmove-right))
 (global-set-key [s-up] (ignore-error-wrapper 'windmove-up))
 (global-set-key [s-down] (ignore-error-wrapper 'windmove-down))
+
+(global-set-key (kbd "M-x") 'smex)
+(global-set-key (kbd "M-X") 'smex-major-mode-commands)
+(global-set-key (kbd "C-c C-c M-x") 'execute-extended-command)
 #+END_SRC
