--- a/init.org
+++ b/init.org
@@ -436,6 +436,30 @@ Org mode data is saved within an iCloud directory so that it'll be replicated to
 (require 'popwin)
 (popwin-mode t)
 #+end_src
+** isearch-delete-something
+#+begin_src emacs-lisp
+  ;; An attempt at this Emacs SX question:
+  ;; https://emacs.stackexchange.com/questions/10359/delete-portion-of-isearch-string-that-does-not-match-or-last-char-if-complete-m
+
+  (defun isearch-delete-something ()
+    "Delete non-matching text or the last character."
+    ;; Mostly copied from `isearch-del-char' and Drew's answer on the page above
+    (interactive)
+    (if (= 0 (length isearch-string))
+        (ding)
+      (setq isearch-string
+            (substring isearch-string
+                       0
+                       (or (isearch-fail-pos) (1- (length isearch-string)))))
+      (setq isearch-message
+            (mapconcat #'isearch-text-char-description isearch-string "")))
+    (if isearch-other-end (goto-char isearch-other-end))
+    (isearch-search)
+    (isearch-push-state)
+    (isearch-update))
+
+  (define-key isearch-mode-map (kbd "<backspace>") 'isearch-delete-something)
+#+end_src
 ** neotree
 #+begin_src emacs-lisp
   (require 'neotree)
