--- a/init.org
+++ b/init.org
@@ -1,3 +1,5 @@
+# -*- mode: org -*-
+
 * Emacs Setup
 ** Customization
 Try to save customized values somewhere other than in the main init file
@@ -264,30 +266,39 @@ the checking happens for all pairs in auto-minor-mode-alist"
 * Org Mode Setup
 Org mode data is saved within an iCloud directory so that it'll be replicated to all my machines.
 #+BEGIN_SRC emacs-lisp
-  (setq akt/agenda-personal (akt/icloud-path "personal.org"))
   (setq akt/agenda-avegant (akt/icloud-path "avegant.org"))
+  (setq akt/agenda-versame (akt/icloud-path "versame.org"))
   (setq akt/agenda-panamint (akt/icloud-path "panamint.org"))
-
+  (setq akt/gtd (akt/icloud-path "gtd.org"))
   (setq org-default-notes-file (akt/icloud-path (concat akt/hostname "-capture.org")))
-
   (akt/touch-file org-default-notes-file)
 #+END_SRC 
+
+#+begin_src emacs-lisp
+  (defun avegant ()
+    "Begin working on Avegant tasks"
+    (interactive)
+    (switch-to-buffer (find-file-noselect akt/agenda-avegant)))
+
+  (defun gtd ()
+    "Getting Things Done"
+    (interactive)
+    (switch-to-buffer (find-file-noselect akt/gtd)))
+#+end_src
 
 #+BEGIN_SRC emacs-lisp
   (setq org-agenda-files (list
                           org-default-notes-file
-                          akt/agenda-personal
                           akt/agenda-avegant
-                          akt/agenda-panamint))
+                          akt/agenda-versame
+                          akt/agenda-panamint
+                          akt/gtd))
 
     (setq org-log-done t)
     (setq org-startup-indented t)
     (setq org-directory akt/icloud-directory)
     (add-hook 'org-mode-hook (lambda () (auto-revert-mode 1)))
-    (setq org-refile-targets (list (cons akt/agenda-avegant '(:maxlevel . 2))
-                                   (cons akt/agenda-personal '(:maxlevel . 2))))
-
-  ;;  (load-file "~/.emacs.d/lisp/org-secretary.el")
+    (setq org-refile-targets (list (cons akt/agenda-avegant '(:maxlevel . 2))))
 
     (setq org-todo-keywords
           '((sequence "TODO(t)" "|" "DONE(d)" "CNCL(c)")
