--- a/init.org
+++ b/init.org
@@ -268,6 +268,12 @@ the checking happens for all pairs in auto-minor-mode-alist"
 
 #+end_src
 * Org Mode Setup
+#+begin_src emacs-lisp
+  (org-babel-do-load-languages
+   'org-babel-load-languages
+   '((gnuplot . t)))
+#+end_src
+
 Org mode data is saved within an iCloud directory so that it'll be replicated to all my machines.
 #+BEGIN_SRC emacs-lisp
   (setq akt/agenda-avegant (akt/icloud-path "avegant.org"))
@@ -379,6 +385,37 @@ Org mode data is saved within an iCloud directory so that it'll be replicated to
     "Where to save Andy's Org Mode clocks" :group 'org-clock :type 'string)
   (setq org-clock-persist 'history)
   (org-clock-persistence-insinuate)
+#+end_src
+** clock table stuff
+#+begin_src emacs-lisp
+(defun org-dblock-write:rangereport (params)
+  "Display day-by-day time reports."
+  (let* ((ts (plist-get params :tstart))
+         (te (plist-get params :tend))
+         (start (time-to-seconds
+                 (apply 'encode-time (org-parse-time-string ts))))
+         (end (time-to-seconds
+               (apply 'encode-time (org-parse-time-string te))))
+         day-numbers)
+    (setq params (plist-put params :tstart nil))
+    (setq params (plist-put params :end nil))
+    (while (<= start end)
+      (save-excursion
+        (insert "\n\n"
+                (format-time-string (car org-time-stamp-formats)
+                                    (seconds-to-time start))
+                "----------------\n")
+        (org-dblock-write:clocktable
+         (plist-put
+          (plist-put
+           params
+           :tstart
+           (format-time-string (car org-time-stamp-formats)
+                               (seconds-to-time start)))
+          :tend
+          (format-time-string (car org-time-stamp-formats)
+                              (seconds-to-time end))))
+        (setq start (+ 86400 start))))))
 #+end_src
 * Non-standard Features
 ** Git
